Update branch name from 'master' to 'main'

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # 1) Make sure you’re on the correct branch
-git checkout master
+git checkout main
 
 # 2) Create/overwrite the workflow with a modern config
 mkdir -p .github/workflows
