--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,20 @@
+cat > settings.gradle <<'EOF'
+pluginManagement {
+  repositories {
+    google()
+    mavenCentral()
+    gradlePluginPortal()
+  }
+}
+
+dependencyResolutionManagement {
+  repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+  repositories {
+    google()
+    mavenCentral()
+  }
+}
+
 rootProject.name = "study_tracker_app"
-// Include the Android application module
 include(":app")
+EOF
