--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,32 @@ name: android-ci
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
           cache: gradle
 
-      # Configure Gradle
-      - uses: gradle/actions/setup-gradle@v3
+      # Provisionne Gradle 8.2.1 pour pouvoir générer le wrapper si absent
+      - name: Provision Gradle 8.2.1
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-version: 8.2.1
 
-      - name: Generate Gradle wrapper
+      - name: Generate Gradle wrapper (8.2.1)
         run: |
           gradle wrapper --gradle-version 8.2.1
           chmod +x gradlew
@@ -31,7 +35,7 @@ jobs:
       - name: Build Debug APK
         run: ./gradlew --no-daemon --stacktrace assembleDebug
 
-      - name: Upload APK
+      - name: Upload APK (v4)
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
