--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,61 +1,80 @@
 plugins {
-    id("com.android.application")
-    id("org.jetbrains.kotlin.android")
-    id("org.jetbrains.kotlin.kapt")
+  id("com.android.application")
+  id("org.jetbrains.kotlin.android")
+  id("org.jetbrains.kotlin.kapt")
 }
 
 android {
-    namespace = "com.example.studytracker"
-    compileSdk = 34
+  namespace "com.example.studytracker"
+  compileSdk 34
 
-    defaultConfig {
-        applicationId = "com.example.studytracker"
-        minSdk = 24
-        targetSdk = 34
-        versionCode = 1
-        versionName = "1.0"
-    }
+  defaultConfig {
+    applicationId "com.example.studytracker"
+    minSdk 24
+    targetSdk 34
+    versionCode 1
+    versionName "1.0"
+  }
 
-    buildFeatures {
-        compose = true
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
     }
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.3"
+    debug {
+      debuggable true
     }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+  }
 
-    // Exclude some duplicate license files.
-    packagingOptions {
-        resources {
-            excludes += ["/META-INF/{AL2.0,LGPL2.1}"]
-        }
+  buildFeatures {
+    compose true
+  }
+
+  composeOptions {
+    kotlinCompilerExtensionVersion "1.5.3"
+  }
+
+  kotlinOptions {
+    jvmTarget = "17"
+    freeCompilerArgs += [
+      "-Xjvm-default=all"
+    ]
+  }
+
+  packagingOptions {
+    resources {
+      excludes += ["/META-INF/{AL2.0,LGPL2.1}"]
     }
+  }
 }
 
 dependencies {
-    // Core libraries
-    implementation("androidx.core:core-ktx:1.12.0")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
-    implementation("androidx.activity:activity-compose:1.8.0")
+  // Compose BOM
+  implementation(platform("androidx.compose:compose-bom:2023.10.00"))
+  implementation("androidx.compose.ui:ui")
+  implementation("androidx.compose.ui:ui-tooling-preview")
+  debugImplementation("androidx.compose.ui:ui-tooling")
 
-    // Jetpack Compose BOM for consistent versions
-    implementation(platform("androidx.compose:compose-bom:2023.10.00"))
-    implementation("androidx.compose.ui:ui")
-    implementation("androidx.compose.ui:ui-tooling-preview")
-    implementation("androidx.compose.material3:material3")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2")
-    implementation("androidx.navigation:navigation-compose:2.7.1")
+  implementation("androidx.compose.material3:material3")
+  implementation("androidx.activity:activity-compose:1.7.2")
 
-    // Compose lifecycle integration
-    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
+  // Lifecycle + ViewModel Compose
+  implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
+  implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2")
+  implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
 
-    // Data storage using Room (not used but reserved for future)
-    implementation("androidx.room:room-runtime:2.5.2")
-    kapt("androidx.room:room-compiler:2.5.2")
-    implementation("androidx.room:room-ktx:2.5.2")
+  // Navigation Compose
+  implementation("androidx.navigation:navigation-compose:2.7.1")
 
-    // JSON serialization for storing entries
-    implementation("com.google.code.gson:gson:2.10.1")
+  // Coroutines
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
+
+  // Gson (pour persistance SharedPreferences JSON)
+  implementation("com.google.code.gson:gson:2.10.1")
+
+  // Icons Material
+  implementation("androidx.compose.material:material-icons-extended")
+
+  // AppCompat (facultatif si nécessaire)
+  implementation("androidx.appcompat:appcompat:1.6.1")
 }
