--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: '17'
           cache: gradle
 
-      # Provisionne Gradle 8.2.1 pour pouvoir générer le wrapper si absent
+      # Provisionne Gradle 8.2.1 pour générer le wrapper si absent (avertissement OK)
       - name: Provision Gradle 8.2.1
         uses: gradle/gradle-build-action@v3
         with:
