--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,7 @@ android {
 
   kotlinOptions {
     jvmTarget = "17"
-    freeCompilerArgs += [
-      "-Xjvm-default=all"
-    ]
+    freeCompilerArgs += ["-Xjvm-default=all"]
   }
 
   packagingOptions {
