--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,9 @@ android {
     }
   }
 
-  buildFeatures {
-    compose true
-  }
+  buildFeatures { compose true }
 
-  composeOptions {
-    kotlinCompilerExtensionVersion "1.5.3"
-  }
+  composeOptions { kotlinCompilerExtensionVersion "1.5.3" }
 
   kotlinOptions {
     jvmTarget = "17"
@@ -47,7 +43,6 @@ android {
 }
 
 dependencies {
-  // Compose BOM
   implementation(platform("androidx.compose:compose-bom:2023.10.00"))
   implementation("androidx.compose.ui:ui")
   implementation("androidx.compose.ui:ui-tooling-preview")
@@ -56,23 +51,13 @@ dependencies {
   implementation("androidx.compose.material3:material3")
   implementation("androidx.activity:activity-compose:1.7.2")
 
-  // Lifecycle + ViewModel Compose
   implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
   implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2")
   implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
 
-  // Navigation Compose
   implementation("androidx.navigation:navigation-compose:2.7.1")
-
-  // Coroutines
   implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
-
-  // Gson (persistance simple JSON)
   implementation("com.google.code.gson:gson:2.10.1")
-
-  // Icons Material
   implementation("androidx.compose.material:material-icons-extended")
-
-  // AppCompat (si nécessaire)
   implementation("androidx.appcompat:appcompat:1.6.1")
 }
