--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 }
 
 dependencies {
+  // Compose BOM
   implementation(platform("androidx.compose:compose-bom:2023.10.00"))
   implementation("androidx.compose.ui:ui")
   implementation("androidx.compose.ui:ui-tooling-preview")
@@ -51,13 +52,23 @@ dependencies {
   implementation("androidx.compose.material3:material3")
   implementation("androidx.activity:activity-compose:1.7.2")
 
+  // Lifecycle + ViewModel Compose
   implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
   implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2")
   implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
 
+  // Navigation Compose
   implementation("androidx.navigation:navigation-compose:2.7.1")
+
+  // Coroutines
   implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
+
+  // Persistance simple JSON
   implementation("com.google.code.gson:gson:2.10.1")
+
+  // Icônes Material
   implementation("androidx.compose.material:material-icons-extended")
+
+  // AppCompat (si nécessaire)
   implementation("androidx.appcompat:appcompat:1.6.1")
 }
